--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,15 +11,15 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="assets/images/logo.png" alt="Beki AI Hub Logo"></a>
+      <a href="#"><img src="assets/images/logo.png" alt="Beki AI Hub Logo"></a>
     </div>
     <nav class="nav-links">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="solutions.html">Solutions</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#hero" class="active">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#solutions">Solutions</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <div class="header-right">
@@ -36,6 +36,7 @@
           <a href="https://wa.me/48780502904" target="_blank">WhatsApp: +48 780 502 904</a>
           <a href="tel:+251911982197">Call: +251 911 982197</a>
           <a href="mailto:bereketendalebekel@gmail.com">Email: bereketendalebekel@gmail.com</a>
+          <a href="about.html">About Us</a>
         </div>
       </div>
     </div>
@@ -43,17 +44,55 @@
 
   <!-- Hero Section -->
   <main>
-    <section class="hero">
+    <section id="hero" class="hero">
       <h1>Welcome to Beki AI Hub</h1>
       <p>Your central hub for powerful AI applications that solve real-world problems.</p>
     </section>
 
-    <!-- Showcase AI Apps -->
-    <section class="services-samples">
-      <h2>Our AI Applications</h2>
-      <div class="service-item"><a href="#">AI with Beki (Chatbot)</a></div>
-      <div class="service-item"><a href="#">AI App 2 (Coming Soon)</a></div>
-      <div class="service-item"><a href="#">AI App 3 (Coming Soon)</a></div>
+    <!-- Services Section -->
+    <section id="services" class="section">
+      <h2>Services</h2>
+      <p>Hover over the services to see more info, click to scroll to content below.</p>
+      <div class="service-previews">
+        <div class="service-card" data-target="#service1">AI with Beki (Chatbot)</div>
+        <div class="service-card" data-target="#service2">AI Analytics Tool</div>
+        <div class="service-card" data-target="#service3">AI Image Generator</div>
+      </div>
+    </section>
+
+    <!-- Detailed Services Content -->
+    <section id="service1" class="service-detail">
+      <h3>AI with Beki (Chatbot)</h3>
+      <p>Interactive chatbot to assist users with questions and tasks.</p>
+      <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-link">Open Chatbot</a>
+    </section>
+
+    <section id="service2" class="service-detail">
+      <h3>AI Analytics Tool</h3>
+      <p>Coming soon: AI-powered analytics for business insights.</p>
+    </section>
+
+    <section id="service3" class="service-detail">
+      <h3>AI Image Generator</h3>
+      <p>Coming soon: Generate stunning AI images with your prompts.</p>
+    </section>
+
+    <!-- Solutions Section -->
+    <section id="solutions" class="section">
+      <h2>Solutions</h2>
+      <p>Our AI solutions are designed to automate and simplify tasks for businesses and individuals.</p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section">
+      <h2>About Us</h2>
+      <p>Beki AI Hub is dedicated to building AI tools that help people solve real problems efficiently.</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <p>Reach out via WhatsApp, phone, or email for inquiries.</p>
     </section>
   </main>
 
