Updated hero section with background slideshow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,19 +61,18 @@
     </div>
   </header>
 
-  <!-- Hero -->
-  <main>
-    <section id="hero" class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-content">
-        <h1>Welcome to Beki AI Hub</h1>
-        <p>Your central hub for powerful AI applications that solve real-world problems.</p>
-        <div class="hero-cta">
-          <a href="#services" class="btn btn-primary">Explore services</a>
-          <a href="#contact" class="btn">Contact us</a>
-        </div>
-      </div>
-    </section>
+  <!-- Hero Section -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Welcome to Beki AI Hub</h1>
+    <p>Your central hub for powerful AI applications that solve real-world problems.</p>
+    <div class="hero-cta">
+      <a href="#services" class="btn btn-primary">Explore Services</a>
+      <a href="#contact" class="btn btn-outline">Get in Touch</a>
+    </div>
+  </div>
+</section>
+
 
     <!-- Services (apps gallery) -->
     <section id="services" class="section">
