Optimized hero section with background slideshow and overlay

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,7 @@
 
   <!-- Hero Section -->
 <section class="hero">
+  <div class="hero-overlay"></div>
   <div class="hero-content">
     <h1>Welcome to Beki AI Hub</h1>
     <p>Your central hub for powerful AI applications that solve real-world problems.</p>
@@ -72,6 +73,7 @@
     </div>
   </div>
 </section>
+
 
 
     <!-- Services (apps gallery) -->
