Made AI Applications cards clickable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,30 +55,36 @@
   </section>
 
   <!-- Services -->
-  <section id="services" class="section">
-    <div class="container">
-      <h2>Our AI Applications</h2>
-      <p class="lede">Click any app to open it or learn more.</p>
-      <div class="apps-grid">
-        <article class="app-card">
-          <img src="assets/images/app-beki.png" alt="AI with Beki" />
-          <h3>AI with Beki</h3>
-          <p>Smart conversational assistant.</p>
-          <a class="btn btn-primary" href="https://ai-project-977z.vercel.app/" target="_blank">Open App</a>
-        </article>
-        <article class="app-card">
-          <img src="assets/images/app-sample1.png" alt="AI Analytics" />
-          <h3>AI Analytics</h3>
-          <p>Business insights & dashboards (coming soon).</p>
-        </article>
-        <article class="app-card">
-          <img src="assets/images/app-sample2.png" alt="AI Image Maker" />
-          <h3>AI Image Maker</h3>
-          <p>Generate images & creative assets.</p>
-        </article>
-      </div>
-    </div>
-  </section>
+  <section id="applications">
+  <h2>Our AI Applications</h2>
+  <p>Click any app to open it or learn more.</p>
+
+  <div class="apps-grid">
+
+    <!-- AI with Beki -->
+    <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-card">
+      <img src="assets/images/app-beki.png" alt="AI with Beki" />
+      <h3>AI with Beki</h3>
+      <p>Smart conversational assistant.</p>
+    </a>
+
+    <!-- AI Analytics -->
+    <a href="#" class="app-card">
+      <img src="assets/images/app-sample1.png" alt="AI Analytics" />
+      <h3>AI Analytics</h3>
+      <p>Business insights & dashboards (coming soon).</p>
+    </a>
+
+    <!-- AI Image Maker -->
+    <a href="#" class="app-card">
+      <img src="assets/images/app-sample2.png" alt="AI Image Maker" />
+      <h3>AI Image Maker</h3>
+      <p>Generate images & creative assets.</p>
+    </a>
+
+  </div>
+</section>
+
 
   <!-- Case Studies -->
   <section id="case-studies" class="section">
