Made AI Applications cards clickable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
   </section>
 
   <!-- Services -->
-  <section id="applications">
+  <section id="services">
   <h2>Our AI Applications</h2>
   <p>Click any app to open it or learn more.</p>
 
