--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,34 +12,26 @@
 <body>
   <!-- Header -->
   <header class="site-header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" alt="Beki AI Hub Logo" />
-      </a>
+  <div class="container header-inner">
+    <a class="logo-link" href="index.html">
+      <img src="assets/images/logo.png" alt="Beki AI Hub Logo" class="logo"/>
+    </a>
 
-      <nav class="main-nav">
-        <ul class="nav-list">
-          <li><a href="#hero" class="nav-link active">Home</a></li>
-          <li><a href="#services" class="nav-link">Services</a></li>
-          <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
-          <li><a href="#solutions" class="nav-link">Solutions</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
+    <nav class="main-nav" aria-label="Main navigation">
+      <ul class="nav-list" id="mainNav">
+        <li><a href="index.html#hero" class="nav-link active">Home</a></li>
+        <li><a href="index.html#services" class="nav-link">Services</a></li>
+        <li><a href="index.html#case-studies" class="nav-link">Case Studies</a></li>
+        <li><a href="index.html#solutions" class="nav-link">Solutions</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+    </nav>
 
-      <button id="hamburger" class="hamburger">☰</button>
-      <div id="hamburger-panel" class="hamburger-panel">
-        <a href="login.html">Log in</a>
-        <a href="signup.html">Sign up</a>
-        <a href="settings.html">Settings</a>
-        <a href="about.html">About us</a>
-        <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
-        <a href="tel:+251911982197">Call</a>
-        <a href="mailto:bereketendalebekel@gmail.com">Email</a>
-      </div>
-    </div>
-  </header>
+    <button id="hamburger" class="hamburger" aria-label="Toggle menu">☰</button>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <section id="hero" class="hero">
