--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,36 +10,48 @@
   <script src="assets/js/script.js" defer></script>
 </head>
 <body>
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" alt="Beki AI Hub Logo" />
-      </a>
+<!-- Header -->
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="index.html" class="logo">
+      <img src="assets/images/logo.png" alt="Beki AI Hub Logo" />
+    </a>
 
-      <nav class="main-nav">
-        <ul class="nav-list">
-          <li><a href="#hero" class="nav-link active">Home</a></li>
-          <li><a href="#services" class="nav-link">Services</a></li>
-          <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
-          <li><a href="#solutions" class="nav-link">Solutions</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
+    <!-- Desktop Menu -->
+    <nav class="main-nav">
+      <ul class="nav-list">
+        <li><a href="#hero" class="nav-link active">Home</a></li>
+        <li><a href="#services" class="nav-link">Services</a></li>
+        <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
+        <li><a href="#solutions" class="nav-link">Solutions</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
+      </ul>
+    </nav>
 
-      <button id="hamburger" class="hamburger">☰</button>
-      <div id="hamburger-panel" class="hamburger-panel">
-        <a href="login.html">Log in</a>
-        <a href="signup.html">Sign up</a>
-        <a href="settings.html">Settings</a>
-        <a href="about.html">About us</a>
-        <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
-        <a href="tel:+251911982197">Call</a>
-        <a href="mailto:bereketendalebekel@gmail.com">Email</a>
-      </div>
+    <!-- Hamburger Icon -->
+    <button id="hamburger" class="hamburger">☰</button>
+
+    <!-- Mobile Menu Panel -->
+    <div id="mobile-menu" class="mobile-menu">
+      <a href="#hero">Home</a>
+      <a href="#services">Services</a>
+      <a href="#case-studies">Case Studies</a>
+      <a href="#solutions">Solutions</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <hr>
+      <a href="login.html">Log in</a>
+      <a href="signup.html">Sign up</a>
+      <a href="settings.html">Settings</a>
+      <a href="about.html">About us</a>
+      <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
+      <a href="tel:+251911982197">Call</a>
+      <a href="mailto:bereketendalebekel@gmail.com">Email</a>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <section id="hero" class="hero">
