Made AI Applications cards clickable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,10 @@
     </nav>
 
     <!-- Hamburger Icon -->
-    <button id="hamburger" class="hamburger">☰</button>
+<button id="hamburger" class="hamburger" aria-label="Menu">
+  &#9776;
+</button>
+
 
     <!-- Mobile Menu Panel -->
     <div id="mobile-menu" class="mobile-menu">
