Add company profile, management and HSE pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,144 +3,204 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Beki AI Hub</title>
+  <title>Electromechanical & Digital Systems PLC</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css" />
   <script src="assets/js/script.js" defer></script>
 </head>
+
 <body>
-  <!-- Header -->
+
+  <!-- ================= HEADER ================= -->
   <header class="site-header">
     <div class="container header-inner">
       <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" alt="Beki AI Hub Logo" />
+        <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC Logo" />
       </a>
 
       <nav class="main-nav">
         <ul class="nav-list">
           <li><a href="#hero" class="nav-link active">Home</a></li>
-          <li><a href="#services" class="nav-link">Services</a></li>
-          <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
+          <li><a href="#divisions" class="nav-link">Divisions</a></li>
+          <li><a href="#case-studies" class="nav-link">Projects</a></li>
           <li><a href="#solutions" class="nav-link">Solutions</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
+          <li><a href="company-profile.html">Company Profile</a></li>
+          <li><a href="management.html">Management</a></li>
+          <li><a href="hse.html">HSE Policy</a></li>
+
         </ul>
       </nav>
 
       <button id="hamburger" class="hamburger">☰</button>
       <div id="hamburger-panel" class="hamburger-panel">
-        <a href="login.html">Log in</a>
-        <a href="signup.html">Sign up</a>
-        <a href="settings.html">Settings</a>
-        <a href="about.html">About us</a>
-        <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
-        <a href="tel:+251911982197">Call</a>
+        <a href="#about">About Us</a>
+        <a href="#divisions">Our Divisions</a>
+        <a href="#contact">Contact</a>
         <a href="mailto:bereketendalebekel@gmail.com">Email</a>
+        <a href="tel:+251911982197">Call</a>
+        <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
       </div>
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- ================= HERO ================= -->
   <section id="hero" class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>Welcome to Beki AI Hub</h1>
-      <p>Your central hub for powerful AI applications that solve real-world problems.</p>
+      <h1>
+        Building Smart Infrastructure & Digital Systems<br>
+        for the Future
+      </h1>
+      <p>
+        We integrate electromechanical engineering with digital intelligence —
+        delivering smart homes, industrial automation, AI platforms, and secure
+        IT systems for enterprises and institutions.
+      </p>
+
       <div class="hero-cta">
-        <a href="#services" class="btn btn-primary">Explore Services</a>
-        <a href="#contact" class="btn btn-outline">Get in Touch</a>
+        <a href="#divisions" class="btn btn-primary">Explore Our Divisions</a>
+        <a href="#contact" class="btn btn-outline">Partner With Us</a>
       </div>
     </div>
   </section>
 
-  <!-- Services -->
-  <section id="services">
-  <h2>Our AI Applications</h2>
-  <p>Click any app to open it or learn more.</p>
+  <!-- ================= DIVISIONS ================= -->
+  <section id="divisions" class="section">
+    <div class="container">
+      <h2>Our Divisions</h2>
+      <p class="lede">
+        Multidisciplinary engineering and digital solutions under one PLC.
+      </p>
 
-  <div class="apps-grid">
+      <div class="apps-grid">
 
-    <!-- AI with Beki -->
-    <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-card">
-      <img src="assets/images/app-beki.png" alt="AI with Beki" />
-      <h3>AI with Beki</h3>
-      <p>Smart conversational assistant.</p>
-    </a>
+        <!-- Electromechanical Division -->
+        <div class="app-card">
+          <img src="assets/images/app-sample1.png" alt="Electromechanical Systems">
+          <h3>Electromechanical Systems</h3>
+          <p>
+            Electrical installation, industrial mechanical systems,
+            maintenance, and infrastructure deployment.
+          </p>
+        </div>
 
-    <!-- AI Analytics -->
-    <a href="#" class="app-card">
-      <img src="assets/images/app-sample1.png" alt="AI Analytics" />
-      <h3>AI Analytics</h3>
-      <p>Business insights & dashboards (coming soon).</p>
-    </a>
+        <!-- Smart Systems / IoT -->
+        <div class="app-card">
+          <img src="assets/images/app-sample2.png" alt="Smart Systems & IoT">
+          <h3>Smart Systems & IoT</h3>
+          <p>
+            Smart homes, sensor-based monitoring, remote control,
+            and intelligent automation solutions.
+          </p>
+        </div>
 
-    <!-- AI Image Maker -->
-    <a href="#" class="app-card">
-      <img src="assets/images/app-sample2.png" alt="AI Image Maker" />
-      <h3>AI Image Maker</h3>
-      <p>Generate images & creative assets.</p>
-    </a>
+        <!-- Digital Systems / AI -->
+        <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-card">
+          <img src="assets/images/app-beki.png" alt="Digital Systems & AI">
+          <h3>Digital Systems & AI</h3>
+          <p>
+            AI platforms, analytics, cybersecurity, software systems,
+            and digital transformation services.
+          </p>
+        </a>
 
-  </div>
-</section>
+      </div>
+    </div>
+  </section>
 
-
-  <!-- Case Studies -->
+  <!-- ================= PROJECTS / CASE STUDIES ================= -->
   <section id="case-studies" class="section">
     <div class="container">
-      <h2>Case Studies</h2>
+      <h2>Selected Projects & Use Cases</h2>
+
       <div class="cases-grid">
         <div class="case-card">
-          <img src="assets/images/case1.png" alt="Case 1">
-          <h4>Smart IoT Monitoring</h4>
-          <p>Reduced downtime for industrial client.</p>
+          <img src="assets/images/case1.png" alt="Industrial Monitoring">
+          <h4>Industrial Smart Monitoring</h4>
+          <p>
+            Sensor-based monitoring systems reducing downtime
+            and improving operational efficiency.
+          </p>
         </div>
+
         <div class="case-card">
-          <img src="assets/images/case2.png" alt="Case 2">
-          <h4>Customer Support Automation</h4>
-          <p>Automated responses reduced SLA times by 50%.</p>
+          <img src="assets/images/case2.png" alt="AI Automation">
+          <h4>AI-Driven Automation</h4>
+          <p>
+            Intelligent automation for customer support,
+            analytics, and operational decision-making.
+          </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Solutions -->
+  <!-- ================= SOLUTIONS ================= -->
   <section id="solutions" class="section">
     <div class="container">
-      <h2>Solutions</h2>
-      <p>We deliver tailored AI solutions: automation, security, analytics, and custom integrations.</p>
+      <h2>Our Solutions</h2>
+      <p class="lede">
+        End-to-end engineering and digital solutions for enterprises,
+        institutions, and large-scale infrastructure.
+      </p>
+
+      <p style="text-align:center;">
+        Electrical & mechanical installation • Smart infrastructure •
+        IoT & automation • AI & data analytics • Cybersecurity •
+        Custom software systems • System integration & consulting
+      </p>
     </div>
   </section>
 
-  <!-- About -->
+  <!-- ================= ABOUT ================= -->
   <section id="about" class="section">
     <div class="container">
-      <h2>About</h2>
-      <p>Beki AI Hub designs pragmatic AI tools that help people and businesses succeed.</p>
+      <h2>About Electromechanical & Digital Systems PLC</h2>
+      <p>
+        Electromechanical & Digital Systems PLC is a multidisciplinary company
+        focused on delivering modern engineering and digital solutions.
+        We bridge traditional electromechanical systems with advanced
+        information technology, artificial intelligence, and IoT.
+      </p>
+
+      <p>
+        Our mission is to support national infrastructure, enterprises,
+        and institutions through innovation, reliability, and secure
+        technology integration.
+      </p>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Message" rows="5" required></textarea>
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Send Message</button>
-        </div>
-      </form>
-    </div>
+  <!-- ================= CONTACT ================= -->
+  <section id="contact" class="contact-section">
+    <h2>Contact Us</h2>
+
+    <form id="contact-form" class="contact-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="Your Name" required />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Your Email" required />
+
+      <label for="message">Message</label>
+      <textarea id="message" placeholder="Your Message" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
-  <!-- Footer -->
+  <!-- ================= FOOTER ================= -->
   <footer class="site-footer">
     <div class="container">
-      <p>© 2025 Beki AI Hub | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
+      <p>
+        © 2025 Electromechanical & Digital Systems PLC |
+        All Rights Reserved
+      </p>
     </div>
   </footer>
+
 </body>
 </html>
