Refine header and navigation to corporate engineering style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,38 +13,42 @@
 <body>
 
   <!-- ================= HEADER ================= -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC Logo" />
-      </a>
+  <!-- Header -->
+<header class="site-header">
+  <div class="container header-inner">
 
-      <nav class="main-nav">
-        <ul class="nav-list">
-          <li><a href="#hero" class="nav-link active">Home</a></li>
-          <li><a href="#divisions" class="nav-link">Divisions</a></li>
-          <li><a href="#case-studies" class="nav-link">Projects</a></li>
-          <li><a href="#solutions" class="nav-link">Solutions</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
-          <li><a href="company-profile.html">Company Profile</a></li>
-          <li><a href="management.html">Management</a></li>
-          <li><a href="hse.html">HSE Policy</a></li>
+    <!-- Logo -->
+    <a href="index.html" class="logo">
+      <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC">
+    </a>
 
-        </ul>
-      </nav>
+    <!-- Navigation -->
+    <nav class="main-nav">
+      <ul class="nav-list">
+        <li><a href="index.html" class="nav-link active">Home</a></li>
+        <li><a href="company-profile.html" class="nav-link">Company</a></li>
+        <li><a href="services.html" class="nav-link">Services</a></li>
+        <li><a href="solutions.html" class="nav-link">Digital Systems</a></li>
+        <li><a href="#case-studies" class="nav-link">Projects</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+    </nav>
 
-      <button id="hamburger" class="hamburger">☰</button>
-      <div id="hamburger-panel" class="hamburger-panel">
-        <a href="#about">About Us</a>
-        <a href="#divisions">Our Divisions</a>
-        <a href="#contact">Contact</a>
-        <a href="mailto:bereketendalebekel@gmail.com">Email</a>
-        <a href="tel:+251911982197">Call</a>
-        <a href="https://wa.me/48780502904" target="_blank">WhatsApp</a>
-      </div>
+    <!-- Mobile Hamburger -->
+    <button id="hamburger" class="hamburger">☰</button>
+
+    <!-- Mobile Menu -->
+    <div id="hamburger-panel" class="hamburger-panel">
+      <a href="index.html">Home</a>
+      <a href="company-profile.html">Company</a>
+      <a href="services.html">Services</a>
+      <a href="solutions.html">Digital Systems</a>
+      <a href="#case-studies">Projects</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </header>
+
+  </div>
+</header>
 
   <!-- ================= HERO ================= -->
   <section id="hero" class="hero">
