Fix mobile dropdown navigation behavior

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,62 +23,68 @@
     </a>
 
     <!-- Navigation -->
-    <nav class="main-nav">
+<nav class="main-nav">
   <ul class="nav-list">
 
-    <li class="nav-item dropdown">
+    <!-- Company -->
+    <li class="nav-item has-dropdown">
       <a href="#company" class="nav-link">
         Company <span class="arrow">▾</span>
       </a>
-      <ul class="dropdown-menu">
+      <ul class="dropdown">
         <li><a href="#company">Company Profile</a></li>
         <li><a href="#management">Management</a></li>
         <li><a href="#hse">HSE Policy</a></li>
       </ul>
     </li>
 
-    <li class="nav-item dropdown">
+    <!-- Services -->
+    <li class="nav-item has-dropdown">
       <a href="#services" class="nav-link">
         Services <span class="arrow">▾</span>
       </a>
-      <ul class="dropdown-menu">
+      <ul class="dropdown">
         <li><a href="#services">Electromechanical Works</a></li>
         <li><a href="#services">HVAC Systems</a></li>
         <li><a href="#services">Electrical Installation</a></li>
       </ul>
     </li>
 
-    <li class="nav-item dropdown">
+    <!-- Digital Systems -->
+    <li class="nav-item has-dropdown">
       <a href="#digital" class="nav-link">
         Digital Systems <span class="arrow">▾</span>
       </a>
-      <ul class="dropdown-menu">
+      <ul class="dropdown">
         <li><a href="#digital">Smart Home (IoT)</a></li>
         <li><a href="#digital">Industrial Automation</a></li>
         <li><a href="#digital">AI & Software</a></li>
       </ul>
     </li>
 
-    <li class="nav-item dropdown">
+    <!-- Projects -->
+    <li class="nav-item has-dropdown">
       <a href="#case-studies" class="nav-link">
         Projects <span class="arrow">▾</span>
       </a>
-      <ul class="dropdown-menu">
+      <ul class="dropdown">
         <li><a href="#case-studies">Completed Projects</a></li>
         <li><a href="#case-studies">Ongoing Works</a></li>
       </ul>
     </li>
 
-    <li class="nav-item dropdown">
+    <!-- About -->
+    <li class="nav-item has-dropdown">
       <a href="#about" class="nav-link">
         About <span class="arrow">▾</span>
       </a>
-      <ul class="dropdown-menu">
+      <ul class="dropdown">
         <li><a href="#about">Vision & Mission</a></li>
         <li><a href="#about">Core Values</a></li>
       </ul>
     </li>
 
+    <!-- Contact -->
     <li class="nav-item">
       <a href="#contact" class="nav-link">Contact</a>
     </li>
