Add sticky shrinking header and professional brand identity

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,13 +14,17 @@
 
   <!-- ================= HEADER ================= -->
   <!-- Header -->
-<header class="site-header">
+<header class="site-header" id="site-header">
   <div class="container header-inner">
 
     <!-- Logo -->
-    <a href="index.html" class="logo">
-      <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC">
-    </a>
+    <a href="index.html" class="brand">
+  <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC">
+  <div class="brand-text">
+    <strong>Electromechanical & Digital Systems PLC</strong>
+    <span>Engineering • Digital • Smart Infrastructure</span>
+  </div>
+</a>
 
     <!-- Navigation -->
 <nav class="main-nav">
