Redesign hero section and add professional projects showcase

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,9 +19,9 @@
 
     <!-- Logo -->
     <a href="index.html" class="brand">
-  <img src="assets/images/logo.png" alt="Electromechanical & Digital Systems PLC">
+  <img src="assets/images/logo.png" alt="Electromechanical & Digital systems PLC">
   <div class="brand-text">
-    <strong>Electromechanical & Digital Systems PLC</strong>
+    <strong>Electromechanical & Digital Systems</strong>
     <span>Engineering • Digital • Smart Infrastructure</span>
   </div>
 </a>
@@ -115,20 +115,40 @@
  <!-- ================= HERO ================= -->
 <section id="hero" class="hero">
   <div class="hero-overlay"></div>
+
   <div class="hero-content">
     <h1>
-      Electromechanical & Digital Systems<br>
-      Engineering the Future of Smart Infrastructure
+      Engineering Smart Infrastructure<br>
+      & Digital Systems
     </h1>
-    <p>
-      We deliver integrated electromechanical, automation, and digital solutions —
-      combining engineering excellence with smart technologies to support
-      industries, institutions, and national infrastructure.
+
+    <p class="hero-subtitle">
+      Electromechanical, automation, IoT, and AI-driven systems
+      for industrial, commercial, and government projects.
     </p>
 
     <div class="hero-cta">
-      <a href="#divisions" class="btn btn-primary">Explore Our Divisions</a>
-      <a href="#contact" class="btn btn-outline">Contact Our Team</a>
+      <a href="#divisions" class="btn btn-primary">
+        Our Divisions
+      </a>
+      <a href="#projects" class="btn btn-outline">
+        View Projects
+      </a>
+    </div>
+
+    <div class="hero-stats">
+      <div>
+        <strong>5+</strong>
+        <span>Years Experience</span>
+      </div>
+      <div>
+        <strong>40+</strong>
+        <span>Years Leadership</span>
+      </div>
+      <div>
+        <strong>PLC</strong>
+        <span>Licensed & VAT Registered</span>
+      </div>
     </div>
   </div>
 </section>
@@ -178,28 +198,52 @@
 </section>
 
 <!-- ================= PROJECTS / CASE STUDIES ================= -->
-<section id="case-studies" class="section">
+<section id="projects" class="section">
   <div class="container">
-    <h2>Projects & Use Cases</h2>
+    <h2>Projects & Experience</h2>
+    <p class="lede">
+      Selected electromechanical and digital system projects
+      delivered with quality and reliability.
+    </p>
 
-    <div class="cases-grid">
-      <div class="case-card">
-        <img src="assets/images/case1.png" alt="Industrial Monitoring System">
-        <h4>Industrial Smart Monitoring</h4>
+    <div class="projects-grid">
+
+      <div class="project-card">
+        <span class="tag">Electromechanical</span>
+        <h3>Industrial Electrical Installation</h3>
         <p>
-          Deployment of sensor-based monitoring systems to improve
-          operational efficiency, safety, and preventive maintenance.
+          Medium and low voltage systems, industrial power
+          distribution, and maintenance services.
         </p>
       </div>
 
-      <div class="case-card">
-        <img src="assets/images/case2.png" alt="AI Automation System">
-        <h4>AI-Enabled Automation</h4>
+      <div class="project-card">
+        <span class="tag">HVAC</span>
+        <h3>HVAC & Mechanical Systems</h3>
         <p>
-          Intelligent automation solutions supporting analytics,
-          operational decision-making, and digital process optimization.
+          Installation and maintenance of HVAC systems
+          for commercial and industrial facilities.
         </p>
       </div>
+
+      <div class="project-card">
+        <span class="tag">Smart Systems</span>
+        <h3>Smart Home & Automation</h3>
+        <p>
+          IoT-based smart electrical systems, monitoring,
+          and remote control solutions.
+        </p>
+      </div>
+
+      <div class="project-card">
+        <span class="tag">Digital</span>
+        <h3>AI & Software Platforms</h3>
+        <p>
+          AI-driven systems, analytics, and secure software
+          platforms integrated with infrastructure.
+        </p>
+      </div>
+
     </div>
   </div>
 </section>
