Add division pages and link divisions to dedicated pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,26 +164,26 @@
     <div class="apps-grid">
 
       <!-- Electromechanical Division -->
-      <div class="app-card">
+      <a href="electromechanical.html" class="app-card">
         <img src="assets/images/app-sample1.png" alt="Electromechanical Systems">
         <h3>Electromechanical Systems</h3>
         <p>
           Electrical installation, HVAC, industrial mechanical systems,
           power distribution, and long-term maintenance services.
         </p>
-      </div>
+      </a>
 
       <!-- Smart Systems / IoT -->
-      <div class="app-card">
+      <a href="smart-systems.html" class="app-card">
         <img src="assets/images/app-sample2.png" alt="Smart Systems and IoT">
         <h3>Smart Systems & IoT</h3>
         <p>
           Smart homes, building automation, sensor-based monitoring,
           remote control systems, and intelligent infrastructure solutions.
         </p>
-      </div>
+      </a>
 
-      <!-- Digital Systems / AI -->
+      <!-- Digital Systems / AI (keep external for now) -->
       <a href="https://ai-project-977z.vercel.app/" target="_blank" class="app-card">
         <img src="assets/images/app-beki.png" alt="Digital Systems and AI">
         <h3>Digital Systems & AI</h3>
@@ -196,6 +196,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- ================= PROJECTS / CASE STUDIES ================= -->
 <section id="projects" class="section">
